fix: too much grafana requests on node exporter page

--- a/src/pages/hostPage/nodePage.css
+++ b/src/pages/hostPage/nodePage.css
@@ -66,3 +66,14 @@ iframe {
     margin-top: 50px;
 }
 
+.sec div:first-child {
+    background-color: gray;
+    color: white;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
